# nitro

./: .gitignore  animation.cpp  animation.hpp  atmosphere.hpp  canvas.cpp  demo.cpp  gles2.cpp  gles2.hpp  glsl2h.c  glsl2h.cpp  makefile  meson.build  nitro.cpp  nitro.hpp  scene_graph.cpp  test.cpp  text.cpp  utilities.hpp  widgets.cpp  window_drm.cpp  window_x11.cpp
shaders/: canvas.fs.glsl  canvas.vs.glsl  color.fs.glsl  color.vs.glsl  color_mask.fs.glsl  color_mask.vs.glsl  fragment-mask.glsl  fragment-texture.glsl  mask.fs.glsl  mask.vs.glsl  texture.fs.glsl  texture.vs.glsl  texture_mask.fs.glsl  texture_mask.vs.glsl  vertex-mask.glsl  vertex-texture.glsl  vertex.glsl
